tests/error/poly_errors/non_linear2.err
Error: Not defined for linear argument (at $FILE:17:4)
   | 
15 | @guppy
16 | def main() -> None:
17 |     foo(h)
   |     ^^^^^^ Cannot instantiate copyable type parameter `T` in type
   |            `forall T. (T -[]-> T) -> None` with non-copyable type
   |            `qubit`

Guppy compilation failed due to 1 previous error
